Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow-app
        image: ghcr.io/gmohbey/wisecow-app:latest
        ports:
        - containerPort: 4499  # Replace with your application's listening port
      imagePullSecrets:
      - name: ghcr-secret
